Improve cliassification service
